--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -64,7 +64,8 @@ body {
     scroll-behavior: smooth;
     line-height: var(--line-height);
     overflow-x: hidden;
-    height: 100%;
+    min-height: 100vh;
+    overflow-y: hidden;
 }
 
 html {
